api comes up
