# src/api/league-controller.ts
@@ -1,11 +1,13 @@
-import { Controller, Get, Path, Res, Route, TsoaResponse } from 'tsoa';
+import { Body, Controller, Get, Path, Post, Res, Route, TsoaResponse } from 'tsoa';
 import { ErrorResponse } from './error-message';
 import { League } from '../entities/league';
 import { findLeagueById } from '../services/stats/find-league-by-id';
+import { createLeague } from '../services/stats/create-league';
 
 interface SingleLeagueResponse {
-  league: League;
+  league: League | undefined;
 }
+
 @Route('leagues')
 export class LeaguesController extends Controller {
   @Get('{id}')
@@ -24,5 +26,16 @@ export class LeaguesController extends Controller {
     return {
       league: found
     };
+  }
+
+  @Post('')
+  public async createLeague(
+    @Body() name: string,
+  ): Promise<SingleLeagueResponse> {
+    console.log(name);
+    const league = await createLeague(name);
+    return {
+      league,
+    }
   }
 }
