# swagger.json
@@ -29,9 +29,6 @@
 						"$ref": "#/components/schemas/League"
 					}
 				},
-				"required": [
-					"league"
-				],
 				"type": "object",
 				"additionalProperties": false
 			},
@@ -105,6 +102,35 @@
 						}
 					}
 				]
+			}
+		},
+		"/leagues": {
+			"post": {
+				"operationId": "CreateLeague",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/SingleLeagueResponse"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"type": "string"
+							}
+						}
+					}
+				}
 			}
 		}
 	},
